<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.millipixelsinteractive_031.em.addexpense.AddExpense">


    <RelativeLayout
        android:id="@+id/topbar_layout_add_expenses"
        android:layout_width="match_parent"
        android:background="@drawable/app_gradient"
        android:layout_height="@dimen/topbar_height">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:text="@string/add_expense"
            android:textColor="@color/white"
            android:textSize="@dimen/size_18dp" />

    </RelativeLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_below="@+id/topbar_layout_add_expenses"
        android:padding="@dimen/margin_10_dp"
        android:layout_margin="@dimen/margin_10_dp"
        android:layout_height="match_parent">


        <com.example.millipixelsinteractive_031.em.typeface.FontEditText
            android:id="@+id/amountEditTex"
            android:layout_width="match_parent"
            android:hint="@string/amount"
            android:inputType="number"
            android:layout_height="wrap_content" />

        <com.example.millipixelsinteractive_031.em.typeface.FontEditText
            android:id="@+id/categoryEditText"
            android:layout_width="match_parent"
            android:hint="@string/category"
            android:layout_marginTop="@dimen/margin_10_dp"
            android:focusable="false"
            android:layout_height="wrap_content" />

        <com.example.millipixelsinteractive_031.em.typeface.FontEditText
            android:id="@+id/notesEditText"
            android:layout_width="match_parent"
            android:hint="@string/notes"
            android:layout_marginTop="@dimen/margin_10_dp"
            android:layout_height="wrap_content" />

        <com.example.millipixelsinteractive_031.em.typeface.FontEditText
            android:id="@+id/dateEditText"
            android:layout_width="match_parent"
            android:hint="@string/date"
            android:inputType="date"
            android:layout_marginTop="@dimen/margin_10_dp"
            android:layout_height="wrap_content" />


        <LinearLayout
            android:layout_width="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/margin_20_dp"
            android:layout_height="wrap_content">


            <TextView
                android:text="@string/thumbnail"
                android:layout_width="wrap_content"
                android:textSize="@dimen/size_16dp"
                android:layout_height="wrap_content" />

            <ImageView
                android:id="@+id/firstImage"
                android:src="@drawable/ic_menu_camera"
                android:layout_marginLeft="@dimen/margin_10_dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <ImageView
                android:id="@+id/secondImage"
                android:visibility="gone"
                android:src="@drawable/ic_menu_camera"
                android:layout_marginLeft="@dimen/margin_10_dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>


        <com.example.millipixelsinteractive_031.em.typeface.FontButton
            android:id="@+id/saveButton"
            android:text="@string/save"

            android:layout_marginTop="@dimen/margin_20_dp"
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/app_round_button_drawable"
            android:inputType="number"
           android:textColor="@color/white"
            android:paddingLeft="60dp"
            android:paddingRight="60dp"
            android:layout_height="wrap_content" />


    </LinearLayout>







</RelativeLayout>
