<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">



    <RelativeLayout
        android:background="@drawable/app_gradient_new"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">


        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:paddingTop="@dimen/padding_50dp"
            android:paddingLeft="@dimen/padding_50dp"
            android:paddingRight="@dimen/padding_50dp"
            android:layout_centerInParent="true"
            android:layout_height="wrap_content">

            <TextView

                android:text="@string/app_name_tour"
                android:textColor="@color/white"
                android:textSize="@dimen/size_40dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView

                android:text="@string/know_what_you_spend"
                android:textColor="@color/grey_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView

                android:layout_marginTop="@dimen/margin_20_dp"
                android:text="@string/expense_rocket_enable_you_to"
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:textSize="@dimen/size_15dp"
                android:layout_height="wrap_content" />

        </LinearLayout>


       <LinearLayout
           android:orientation="vertical"
           android:layout_alignParentBottom="true"
           android:layout_width="match_parent"
           android:padding="@dimen/padding_20dp"
           android:layout_height="wrap_content"
           android:id="@+id/linearLayout2">

           <Button
               android:id="@+id/take_a_tour_btn"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_alignTop="@+id/linearLayout2"
               android:layout_centerHorizontal="true"
               android:layout_gravity="center"
               android:layout_marginTop="20dp"
               android:background="@drawable/take_a_tour_drawable"
               android:paddingBottom="@dimen/padding_10dp"
               android:paddingLeft="@dimen/padding_60dp"


               android:paddingRight="@dimen/padding_60dp"
               android:paddingTop="@dimen/padding_10dp"
               android:text="@string/take_a_tour" />



           <Button
               android:text="@string/lets_get_started"
               android:layout_gravity="center"
               android:background="#00000000"
               android:textColor="@color/white"
               android:layout_marginTop="@dimen/margin_10_dp"
               android:id="@+id/let_get_started_btn"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"


               />

       </LinearLayout>



    </RelativeLayout>



</RelativeLayout>