<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <RelativeLayout
        android:id="@+id/permission_top_layout"
        android:layout_width="match_parent"
        android:layout_height="80dp">

        <ImageView
            android:layout_centerVertical="true"
            android:id="@+id/back_button_permission"
            android:background="@drawable/ic_back_icon"
            android:layout_width="wrap_content"
            android:layout_gravity="bottom"
            android:tint="#808080"
            android:layout_marginLeft="@dimen/margin_30_dp"
            android:layout_height="wrap_content" />


    </RelativeLayout>


    <LinearLayout
        app:layout_constraintTop_toBottomOf="@+id/permission_top_layout"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:padding="@dimen/padding_50dp"
        android:gravity="center"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/permission_type_img"
            android:src="@drawable/ic_per_gallary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <com.application.millipixels.expense_rocket.typeface.FontsClass
            android:id="@+id/permission_title"
            android:text="@string/enable_gallery_access"
            android:textSize="@dimen/size_30sp"
            android:textColor="@color/permission_title_color"
            android:gravity="center"
            android:layout_marginTop="@dimen/margin_25_dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <com.application.millipixels.expense_rocket.typeface.FontThin
            android:text="@string/gallery_desc"
            android:id="@+id/permission_desc"
            android:gravity="center"
            android:textColor="@color/purple_text"
            android:layout_marginTop="@dimen/margin_10_dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <com.application.millipixels.expense_rocket.typeface.FontButton
            android:background="@drawable/app_round_button_drawable_red"
            android:text="@string/grant_access"
            android:id="@+id/grant_access"
            android:textColor="@color/white"
            android:layout_marginTop="@dimen/margin_50_dp"
            android:layout_marginRight="@dimen/margin_40_dp"
            android:layout_marginLeft="@dimen/margin_40_dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <com.application.millipixels.expense_rocket.typeface.FontButton
            android:background="@null"
            android:textColor="@color/permission_remind_later"
           android:layout_marginTop="@dimen/margin_15_dp"
            android:text="@string/remind_me_later"
            android:id="@+id/remind_me_later"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />



    </LinearLayout>

    <ImageView
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:src="@drawable/ic_rocket_neww"
        android:layout_marginBottom="@dimen/margin_30_dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</android.support.constraint.ConstraintLayout>