<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    >

    <android.support.v4.view.ViewPager
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:text="@string/skip"

        android:layout_height="@dimen/topbar_Height">


        <com.example.millipixelsinteractive_031.em.typeface.FontsClassLight
            android:id="@+id/btn_skip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/skip"
            android:padding="@dimen/padding_10dp"
            android:layout_marginRight="@dimen/margin_10_dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:textSize="@dimen/size_15dp"
            android:layout_centerVertical="true"
            android:textColor="@color/selectedColor" />
    </RelativeLayout>

    <LinearLayout
        android:gravity="center_horizontal"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/onboarding_login_signup_layout"
        android:id="@+id/layoutDots"
        android:layout_width="match_parent"
        android:layout_marginBottom="@dimen/margin_60_dp"
        android:layout_height="@dimen/size_30dp"
        android:orientation="horizontal"></LinearLayout>

    <LinearLayout
        android:id="@+id/onboarding_login_signup_layout"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:background="@color/white"
        android:layout_marginBottom="@dimen/margin_15_dp"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">


        <com.example.millipixelsinteractive_031.em.typeface.FontButton
            android:id="@+id/btnLogin"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:text="@string/login"
            android:paddingRight="@dimen/padding_50dp"
            android:paddingLeft="@dimen/padding_50dp"
            android:layout_marginBottom="@dimen/margin_20_dp"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:background="@drawable/app_round_button_drawable"
            android:layout_marginRight="@dimen/margin_10_dp"
            android:layout_height="wrap_content" />

        <com.example.millipixelsinteractive_031.em.typeface.FontButton
            android:layout_weight="1"
            android:id="@+id/btnSignup"
            android:text="@string/signup"
            android:paddingRight="@dimen/padding_50dp"
            android:paddingLeft="@dimen/padding_50dp"
            android:textColor="@color/white"
            android:layout_marginBottom="@dimen/margin_20_dp"
            android:textAllCaps="false"
            android:background="@drawable/app_round_button_drawable"
            android:layout_width="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_height="wrap_content" />

    </LinearLayout>

</RelativeLayout>