<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/tools"
    android:layout_marginRight="40dp"
    android:layout_marginLeft="40dp"
    xmlns:android="http://schemas.android.com/apk/res/android"
    app:ignore="NamespaceTypo">

<android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/card_view"
    android:layout_below="@+id/layout_action"
    android:background="@android:color/white"
    app:cardUseCompatPadding="true"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    card_view:cardCornerRadius="5dp">
<RelativeLayout
    android:paddingRight="28dp"
    android:paddingLeft="28dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.example.millipixelsinteractive_031.em.typeface.FontsClassLight
        android:textStyle="bold"
        android:textSize="14sp"
        android:id="@+id/txtEnterText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:text="@string/enter_phone_email"
         />

    <com.example.millipixelsinteractive_031.em.typeface.FontEditText
        android:hint="@string/enter_email"
        android:id="@+id/edtEmail"
        android:singleLine="true"
        android:lines="1"
        android:imeOptions="actionNext"
        android:textSize="14sp"
        android:layout_marginTop="32dp"
        android:layout_below="@+id/txtEnterText"
        android:backgroundTint="@android:color/transparent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />



    <View
        android:id="@+id/divider_email"
        android:background="@android:color/black"
        android:layout_below="@+id/edtEmail"
        android:layout_width="match_parent"
        android:layout_marginLeft="@dimen/margin_4_dp"
        android:layout_marginRight="@dimen/margin_4_dp"
        android:layout_height="0.4dp"></View>



    <android.support.v7.widget.AppCompatSpinner
        android:id="@+id/spnCountarySignup"
        android:layout_marginTop="24dp"
        android:layout_below="@+id/edtEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <View
        android:id="@+id/divider"
        android:layout_marginTop="4dp"
        android:background="@android:color/black"
        android:layout_below="@+id/spnCountarySignup"
        android:layout_width="match_parent"
        android:layout_marginLeft="@dimen/margin_4_dp"
        android:layout_marginRight="@dimen/margin_4_dp"
        android:layout_height="0.4dp"></View>



    <LinearLayout
        android:id="@+id/contact_number_layout"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_below="@+id/divider"
        android:layout_marginTop="24dp"
        android:layout_height="wrap_content">


        <com.example.millipixelsinteractive_031.em.typeface.FontEditText
            android:id="@+id/edtCode"
            android:textSize="14sp"
            android:singleLine="true"
            android:lines="1"
            android:backgroundTint="@android:color/transparent"
            android:maxLength="13"
            android:imeOptions="actionNext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <View
            android:id="@+id/divider_line"
            android:background="@android:color/black"
            android:layout_below="@+id/contact_number_layout"
            android:layout_width="0.4dp"
           android:layout_margin="@dimen/margin_10_dp"
            android:layout_height="match_parent"></View>


        <com.example.millipixelsinteractive_031.em.typeface.FontEditText
            android:hint="@string/enter_phone"
            android:id="@+id/edtPhone"
            android:textSize="14sp"
            android:singleLine="true"

            android:lines="1"
            android:backgroundTint="@android:color/transparent"
            android:maxLength="13"
            android:imeOptions="actionDone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>


    <View
        android:id="@+id/divider1"
        android:background="@android:color/black"
        android:layout_below="@+id/contact_number_layout"
        android:layout_width="match_parent"
        android:layout_marginLeft="@dimen/margin_4_dp"
        android:layout_marginRight="@dimen/margin_4_dp"
        android:layout_height="0.4dp"></View>


    <com.example.millipixelsinteractive_031.em.typeface.FontButton
        android:id="@+id/btnSendOtpSignup"
        android:layout_marginBottom="36dp"
        android:layout_below="@+id/contact_number_layout"
        android:inputType="number"
        android:layout_centerHorizontal="true"
        android:paddingLeft="60dp"
        android:elevation="5dp"
        android:layout_marginTop="28dp"
        android:paddingRight="60dp"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:text="@string/send_otp"
        android:background="@drawable/app_round_button_drawable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</RelativeLayout>

</android.support.v7.widget.CardView>
</RelativeLayout>